# nextflow-lamin

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  nextflow_bulk_rna.ipynb  noxfile.py  pyproject.toml
.github/workflows/: .build.yml.kate-swp  build.yml
docs/: a_test.ipynb  changelog.md  index.md  mcmicro.ipynb  mcmicro.py  mcmicro_01.ipynb  mcmicro_02.ipynb  mcmicro_exemplar.py  nextflow.ipynb  nextflow_bulk_rna.ipynb  nf_core_scrnaseq.ipynb  reference.md  register_mcmicro_run.py  register_nf_run.py  register_scrnaseq_run.py  scrnaseq.ipynb  test_nf_run_linking_new.ipynb
docs/guide/: bulk_rna_seq.ipynb  index.md  quickstart.ipynb
nextflow_lamin/: __init__.py
nextflow_lamin_usecases/: __init__.py
nextflow_rna_seq/.lamindb/: aBPEWG3GwJbTZwAwJ0qu.merged.gene_counts.tsv
tests/: test_base.py
