[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nextflow_lamin_usecases"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbproject",

]

[project.urls]
Home = "https://github.com/laminlabs/nextflow-lamin-usecases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "laminci",
    "nbproject-test",
    "lamindb"
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
